# petcare-advisor-backend

./: .env.example  .gitignore  Dockerfile  IMPROVEMENTS.md  NEW_REPO_SETUP.md  Procfile  README.md  SETUP_NEW_REPO.sh  nixpacks.toml  package-lock.json  pyproject.toml  requirements.txt
src/petcare_advisor/: __init__.py  config.py  main.py
src/petcare_advisor/agents/: __init__.py  careplan_agent.py  collaborative_agent.py  medical_agent.py  root_orchestrator.py  symptom_intake_agent.py  triage_agent.py  vision_agent.py
src/petcare_advisor/shared/: __init__.py  constants.py  types.py  utils.py
src/petcare_advisor/tests/: __init__.py  test_agents.py  test_api.py  test_smoke.py
src/petcare_advisor/tools/: __init__.py  faq_service.py  medication_service.py  persistence.py  report_builder.py
src/petcare_advisor/workflow/: __init__.py  quality_workflow.py
